# top_analysis

./: .gitignore  CMakeLists.txt  README.md  config.ini  config2016.ini  config2016_postVFP.ini  config2016_preVFP.ini  config2017.ini  config2018.ini  config2018_test.ini
cmake/: FindCombineHarvester.cmake
data/: TriggerSF_2016_postVFP.root  TriggerSF_2016_preVFP.root  TriggerSF_2017.root  TriggerSF_2018.root
data/BTagSF/: DeepJet_106XUL18SF_CategoryBreakdown.csv  DeepJet_106XUL18SF_YearCorrelation-V1.csv  wp_deepJet_106XUL16postVFP_v3.csv  wp_deepJet_106XUL16postVFP_v3_lightFromPreVFP.csv  wp_deepJet_106XUL16preVFP_v2.csv
data/DNN/: Inlusive_amcatnlo_xyComponent_JetLepXY_50EP__diff_xy_2016_postVFP_20220621-1524genMETweighted.onnx  Inlusive_amcatnlo_xyComponent_JetLepXY_50EP__diff_xy_2016_preVFP_20220622-0926genMETweighted.onnx  Inlusive_amcatnlo_xyComponent_JetLepXY_50EP__diff_xy_2017_20220621-1425genMETweighted.onnx  Inlusive_amcatnlo_xyComponent_JetLepXY_50EP__diff_xy_2018_20220621-1143genMETweighted.onnx  Inlusive_noMetCut_amcatnlo_xyComponent_JetLepXY_50EP__diff_xy_2016_postVFP_20230206-1041genMETweighted.onnx  Inlusive_noMetCut_amcatnlo_xyComponent_JetLepXY_50EP__diff_xy_2016_preVFP_20230206-1026genMETweighted.onnx  Inlusive_noMetCut_amcatnlo_xyComponent_JetLepXY_50EP__diff_xy_2017_20230206-0940genMETweighted.onnx  Inlusive_noMetCut_amcatnlo_xyComponent_JetLepXY_50EP__diff_xy_2018_20230111-1004genMETweighted.onnx  Inlusive_noMetCut_genMETweight500enlarge_amcatnlo_xyComponent_JetLepXY_50EP__diff_xy_2016_postVFP_20230403-1018genMETweighted.onnx  Inlusive_noMetCut_genMETweight500enlarge_amcatnlo_xyComponent_JetLepXY_50EP__diff_xy_2016_preVFP_20230403-1035genMETweighted.onnx  Inlusive_noMetCut_genMETweight500enlarge_amcatnlo_xyComponent_JetLepXY_50EP__diff_xy_2017_20230403-1000genMETweighted.onnx  Inlusive_noMetCut_genMETweight500enlarge_amcatnlo_xyComponent_JetLepXY_50EP__diff_xy_2018_20230315-1648genMETweighted.onnx
data/JES/2016_postVFP/: RegroupedV2_Summer19UL16_V7_MC_UncertaintySources_AK4PFchs.txt
data/JES/2016_preVFP/: RegroupedV2_Summer19UL16APV_V7_MC_UncertaintySources_AK4PFchs.txt
data/theoryPredictions/firstRound/: README
data/theoryPredictions/secondRound/: README
multiprocess/: condor_status.py  curlSimple_plugin.py  mergeOutputs.py  process.py  run.sh  runCMSconnect.sh  runGrid.sh  runTUnfold.sh  run_condorFileTrans.sh  submitCondor.txt
src/: CMakeLists.txt  Config.cpp  Config.hpp  Dataset.cpp  Dataset.hpp  main.cpp
src/RooUnfold/: CMakeLists.txt
src/cppflow/: CMakeLists.txt  cppflow.cpp
src/ext/: BTagCalibrationStandalone.cpp  BTagCalibrationStandalone.h  CMakeLists.txt  JetCorrectionUncertainty.cc  JetCorrectorParameters.cc  JetResolution.cc  JetResolution.h  JetResolutionObject.cc  JetResolutionObject.h  SimpleJetCorrectionUncertainty.cc
src/modules/: CMakeLists.txt  RooUnfold_test.cpp  Routin.cpp  TUnfold_binning.cpp  TUnfold_binning_fakeBin.cpp  TUnfold_combineYears.cpp  TUnfold_minimalTest.cpp  TUnfold_plotting.cpp  TUnfold_plotting_fakeBin.cpp  TUnfold_unfolding.cpp  TUnfold_unfolding_fakeBin.cpp  analyze_minTrees.cpp  applyDNN.cpp  bTagEff.cpp  binningUnfolding.cpp  binningUnfolding1D_Fabian.cpp  binningUnfolding1D_Fabian_OA.cpp  binningUnfolding1D_Fabian_OA_dPhi.cpp  binningUnfolding2D_Fabian_OA.cpp  binningUnfolding_DNN.cpp  binningUnfolding_DNN_cppflow.cpp  binningUnfolding_DNN_cppflow_2D.cpp  binningUnfolding_DNN_multi.cpp  binningUnfolding_MT.cpp  check_DM.cpp  check_leptonVeto.cpp  compare_powheg_amcatnlo.cpp  compare_pseudoGen.cpp  compare_ttMC.cpp  cr_envelope.cpp  datacard_harvester.cpp  datacard_harvester_2D.cpp  diff_MET.cpp  diff_MET_Stacey.cpp  diff_dPhiResolution.cpp  diff_fakes.cpp  distributions.cpp  distributions_KITsync.cpp  distributions_Philipp.cpp  dnn_Classification.cpp  (+36 more)
src/style/: CMS_lumi.h  cms_labels.cpp  myStyle.C  tdrstyle.C
src/tools/: CMakeLists.txt  bTagWeights.cpp  bTagWeights.hpp  dataTrigger2016.cpp  dataTrigger2016.hpp  dataTrigger2017.cpp  dataTrigger2017.hpp  dataTrigger2018.cpp  dataTrigger2018.hpp  distributionsPlottingHelper.cpp  distributionsPlottingHelper.hpp  dnnRegression.cpp  dnnRegression.hpp  gfx.cpp  hist.cpp  hist.hpp  io.cpp  io.hpp  io.tpp  jetCorrections.cpp  jetCorrections.hpp  jetPileupIDSF.cpp  jetPileupIDSF.hpp  jetVetoMaps.cpp  jetVetoMaps.hpp  leptonCorrections.cpp  leptonCorrections.hpp  leptonSF.cpp  leptonSF.hpp  mcWeights.cpp  mcWeights.hpp  minTreeReader.cpp  minTreeReader.hpp  physics.cpp  physics.hpp  selection.cpp  selection.hpp  systematics.cpp  systematics.hpp  triggerSF.cpp  (+4 more)
src/tree/: LinkDef.h  TreeParticles.hpp
tools/: cmssw-cc7_modified  dCacheUpload.py  splitTTbar_tau.py
tools/cc7_singularity/: .setupCC7singularity.sh  cmssw-cc7_modified
users/: dmeuser.ini  dmeuser_cmsconnect.ini  getPath.py  teroerde.ini  teroerde_cmsconnect.ini
