set(MODULES
  distributions
  unfolding
  unfolding2D
  plot2D_diffMET
  plot_diffMET
  check_DM
  plot_distributions
  templateFit
  compare_ttMC
  test_MT2
  plot2D_sensitivity
  plot2D_sensitivity_MT
  binningUnfolding
  binningUnfolding_MT
  scaleFactorUnfolding
  plot_scaleFactorUnfolding
  plot_response
  compare_pseudoGen
  diff_dPhiResolution
  plot_dPhiResolution
  TUnfold_binning
  TUnfold_unfolding
  TUnfold_plotting
  TUnfold_minimalTest
  RooUnfold_test
  plot_metSF
  TUnfold_binning_fakeBin
  TUnfold_unfolding_fakeBin
  TUnfold_plotting_fakeBin
  diff_fakes
  plot_diff_fakes
  diff_MET
  plot_metStudies
  reweightingSF
  test_TMVA
  distributions_Philipp
  plot_distributions_Philipp
  Routin
  test_BJetRegression
  triggerEff
  plot_triggerEff
  dnn_Classification
  dnn_Classification_fourVec
  binningUnfolding_DNN
  binningUnfolding_DNN_multi
  plot_DNNresolution
  applyDNN
  check_leptonVeto
  test_tensorflow
  plot_leptonVeto
  )

foreach(MODULE ${MODULES})
  add_library(${MODULE} SHARED ${MODULE}.cpp)
endforeach()
